--- a/css/style.css
+++ b/css/style.css
@@ -200,3 +200,176 @@ header .hero img {
   border: 2px solid #6FD186;
   box-shadow: 0px 2px 0px 0px #156B61;
 }
+
+/* Benefits */
+.benefits {
+  text-align: center;
+  display: block;
+  position: relative;
+}
+
+.benefits ul {
+  margin: 0 auto;
+  padding: 4em 0;
+}
+
+.benefits ul li {
+  list-style-type: none;
+  display: inline-block;
+}
+
+.benefits i {
+  color: #223A49;
+  font-size: 60px;
+  margin: 0;
+  vertical-align: middle;
+}
+
+.benefits h2 {
+  color: #223A49;
+}
+
+/* Pricing */
+
+.pricing {
+  background: #BFF1CB url("") top center no-repeat;
+  background: url() top center no-repeat, linear-gradient();
+  background-size: cover;
+  text-align: center;
+  padding: 4em 0;
+}
+
+.pricing ul li {
+  list-style-type: none;
+  text-align: center;
+}
+
+.box {
+  padding: 0 15px 15px;
+  background: #F2F6F1;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.20);
+  min-height: 439px;
+  position: relative;
+}
+
+.box.middle {
+  min-height: 485px;
+  margin-top: 0px;
+}
+
+.box h3 {
+  font-family: "ABeeZee", sans-serif;
+  font-weight: 600;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  background: #223A49;
+  box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.40);
+  left: 0;
+  right: 0;
+  top: 0;
+  text-align: center;
+  margin: 0 -15px 40px;
+  padding: 10px 0;
+}
+
+.box h4 {
+  font-size: 50px;
+  font-weight: normal;
+  margin: 10px 0px 10px;
+  color: #7CC3CB;
+}
+
+.box h4 span.month {
+  font-family: "ABeeZee", sans-serif;
+  font-weight: 100;
+  color: #7CC3CB;
+  font-size: 20px;
+  vertical-align: middle;
+}
+
+.box ul li {
+  font-size: 18px;
+  margin-bottom: 30px;
+  font-weight: 100;
+  text-align: center;
+}
+
+.box .btn {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  right: 20px;
+}
+
+.small {
+  font-size: 14px;
+  color: #223A49;
+  line-height: 15px;
+  font-style: italic;
+  text-align: center;
+}
+
+/* Testimonials */
+
+.testimonials {
+  padding: 4em 0;
+  text-align: center;
+  color: #223A49;
+}
+
+.testimonials h2{
+  color: #223A49;
+}
+
+.testimonials ul li {
+  list-style-type: none;
+}
+
+.testimonials blockquote {
+  color: #FFFFFF;
+  text-align: left;
+  font-style: italic;
+  background: #223A49;
+  position: relative;
+  padding: 30px;
+  width: auto;
+  margin: 0;
+}
+
+.testimonials blockquote:after {
+  top: 100%;
+   left: 13%;
+   border: solid transparent;
+   content: " ";
+   height: 0;
+   width: 0;
+   position: absolute;
+   pointer-events: none;
+   border-top-color: #223A49;
+   border-width: 10px;
+   margin-left: -10px;
+
+}
+
+.testimonials img {
+  height: 65px;
+  width: 65px;
+  border-radius: 50%;
+  float: left;
+  display: inline-block;
+  margin: 20px 10px 0 0;
+}
+
+.testimonials p.name {
+  float: left;
+  display: inline-block;
+  text-align: left;
+  font-size: 13px;
+  font-style: bold;
+  margin-top: 30px;
+}
+
+.staggered li {
+  margin-top: 20px;  
+}
+}
