--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@ header {
   /* Gradient: */
 background-image: linear-gradient(-180deg, #2FA49A 0%, #156B61 100%);
 background-image: linear-gradient(154deg, #156B61 6%, rgba(111,209,134,0.80) 100%);
+padding-bottom: 50px;
 }
 
 header nav {
@@ -184,11 +185,24 @@ header .hero p {
 header .hero img {
   display: block;
   margin: 3em auto 0;
+  width: 38em;
+  height: 24em;
 }
 
 /* BUTTONS */
 
 .btn {
+  border-radius: 4px;
+  color: #FFFFFF;
+  font-weight: 700;
+  text-decoration: none;
+  padding: 10px 30px;
+  background: #6FD186;
+  border: 2px solid #6FD186;
+  box-shadow: 0px 2px 0px 0px #156B61;
+}
+
+.btn-hero {
   border-radius: 4px;
   color: #FFFFFF;
   font-weight: 700;
@@ -238,6 +252,11 @@ header .hero img {
   background-size: cover;
   text-align: center;
   padding: 4em 0;
+}
+
+.pricing p {
+  padding-left: 3em;
+  padding-right: 3em;
 }
 
 .pricing ul li {
@@ -315,81 +334,54 @@ header .hero img {
 /* TESTIMONIALS */
 
 .testimonials {
-  background: #FFFFFF; 
+  background: #FFFFFF;
+  display: inline-block;
 }
 
-.user-photo-1 {
+.one-third {
   float: left;
-}
-
-.user-photo-2 {
-  float: left;
-}
-
-.user-photo-3 {
-  float: right;
-}
-
-/* Hover states to show different user quotes. */
-
-.user-photo-1 img :hover {
-  /* Desired action: up arrow appears on user photo that 
-  is being hovered on, and user quote changes.*/ 
-}
-
-.user-photo-2 img :hover {
-  /* Desired action: up arrow appears on user photo that 
-  is being hovered on, and user quote changes.*/ 
-}
-
-.user-photo-3 img :hover {
- /* Desired action: up arrow appears on user photo that 
-  is being hovered on, and user quote changes.*/   
 }
 
 .blockquote {
   font-family: "Halant", serif;
-  font-size: 20px;
+  font-size: 18px;
   text-align: center;
 }
 
 
 .blockquote span.quotation {
-  font-size: 50px;
+  font-size: 35px;
    color: #7CC3CB;
 }
 
 .blockquote p {
-  font-size: 20px;
+  font-size: 18px;
+  font-weight: 600;
+  text-align: center;
 }
 
-.testimonials blockquote:before {
-  width: 0;
-  height: 0;
-  border-left: 30px solid transparent;
-  border-right: 30px solid transparent;
-  border-bottom: 100px solid #FFFFFF;
-  float: center;    
-  } 
+
 
 /* FINAL CALL TO ACTION */ 
 
-.final {
+.call-to-action {
   background: #F2F6F1;
-  padding-top: 20px;
-  padding-bottom: 10px;
 }
 
-
-.final p {
+.call-to-action .final {
   text-align: center;
-  padding-bottom: 10px;
 }
 
-.final span.final-call {
+.call-to-action h2 {
   font-family: "ABeeZee", sans-serif;
-  font-size: 30px;
-  padding-right: 40px;
+  color: #223A49;
+  display: inline-block;
+  margin: 40px;
+}
+
+.call-to-action a {
+  display: inline-block;
+  margin: 20px;
 }
 
 /* FOOTER */
@@ -446,3 +438,297 @@ footer .logo {
      padding: 2em 0 2em 1.5em;
    }
  }
+
+ /* SETTINGS */
+
+  .settings .account {
+    float: right;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 10px 0;
+  }
+
+  .settings .account img {
+    height: 35px;
+    width: 35px;
+    margin-left: 10px;
+    display: inline-block;
+  }
+
+  .settings .account p {
+    color: #000000;
+    display: inline-block;
+    vertical-align: center;
+    padding-top: 8px;
+    font-weight: 400;
+    margin: 0 0 0 10px;
+}    
+
+.settings .account a {
+  color: #000000;
+  text-decoration: none;
+  text-align: right;
+  margin-right: 10px;
+  margin-top: 8px;
+}
+
+ /* DASHBOARD */
+
+ .dashboard {
+    background: #F2F6F1;
+ }
+
+ .left-nav {
+    height: 100vh;
+    width: 14.66666667%;
+    color: #FFFFFF;
+    background: #156B61;
+    background-image: linear-gradient(190deg, #156B61 45%, #6FD186 90%);
+    float: left;
+    position: fixed;
+    display: block;
+ }
+
+ .left-nav .site-logo {
+    padding: 20px 0;
+    display: block;
+    text-align: center;
+ }
+
+ .left-nav .items {
+    padding: 0 6%;
+ }
+
+ .left-nav .items p {
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 12px;
+    color: #FFFFFF;
+    line-height: 40px;
+ }
+
+ .left-nav .items ul {
+    margin: 0 0 40px;
+    padding: 0;
+ }
+
+ .left-nav .items ul li {
+    list-style-type: none;
+    margin-bottom: 15px;
+ }
+
+ .left-nav .items ul li a {
+    color: #FFFFFF;
+    text-decoration: none;
+    font-weight: 100;
+ }
+
+  .left-nav .items ul li a i {
+    width: 16px;
+    text-align: center;
+    margin-right: 8px;
+  } 
+
+  .left-nav .active li {
+    background: #FFFFFF;
+  }
+
+/* CONTENT */
+
+.content {
+  padding: 6em 1% 1.5em;
+  float: right;
+  width: 98%;
+  position: relative;
+}  
+
+.content .header {
+  margin: 0 1% 20px;
+}
+
+.content .header h1 {
+  font-family: "ABeeZee", sans-serif;
+  font-weight: 100;
+  margin: 0 0 30px;
+  font-size: 36px;
+  color: #223A49;
+  line-height: 44px;
+  float: left;
+  display: inline-block;
+}
+
+.content .header h2 {
+  font-family: "ABeeZee", sans-serif;
+  font-weight: 100;
+  margin: 0 0 30px;
+  font-size: 24px;
+  color: #223A49;
+  line-height: 44px;
+  float: left;
+  display: inline-block; 
+}
+
+.container img {
+  margin-bottom: 10px;
+}
+.container .header > a {
+  margin-left: 5%;
+}
+
+.content-item {
+  width: 96%;
+  margin: 0 2% 25px;
+  float: left;
+  display: block;
+}
+
+.item-box {
+  display: block;
+  height: 230px;
+  background: #FFFFFF;
+  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.40);
+  position: relative;
+  overflow: hidden;
+  padding: 20px;
+}
+
+.link-box {
+  display: block;
+  height: 230px;
+  background: #FFFFFF;
+  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.40);
+  position: relative;
+  overflow: hidden;
+  padding: 20px;
+}
+
+.item-box > img {
+  position: absolute;
+  height: 100%;
+  width: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.item-box h2 {
+  font-family: "ABeeZee", sans-serif;
+  font-weight: 700;
+  font-size: 15px;
+  color: #223A49;
+  line-height: 17px;
+  margin: 0;
+}
+
+.link-box h2 a {
+  color: #7CC3CB;
+  text-decoration: none;
+  font-size: 15px;
+  margin-left: 10px;
+}
+
+.item-box h2 img {
+  width: 16px;
+  height: 16px;
+  position: relative;
+  top: 2px;
+  margin-right: 5px;
+}
+
+.item-box p {
+  font-size: 14px;
+  color: #223A49;
+  line-height: 18px;
+  margin: 5px 0 0;
+}
+
+/* LARGE MOBILE DEVICE */
+
+@media (max-width:560px) {
+  .content {
+    padding: 1.5em 1%;
+    float: right;
+    width: 90%;
+    position: relative;
+  }
+   
+  .content-item {
+    width: 46%;
+    margin: 0 2% 25px;
+    float: left;
+    display: block;
+  }
+
+  p.copyright-crate {
+    text-align: center;
+  }
+
+  header nav ul {
+    float: center;
+    margin-left: 60px;
+  }
+
+  header .hero h1 {
+    text-align: center;
+  }
+
+  header .hero p {
+    text-align: center;
+  }
+
+  .btn-hero {
+    float: center;
+    margin-left: 140px;
+  }
+
+  header .hero img {
+  display: block;
+  margin: 3em auto 0;
+  width: 30em;
+  height: 16em;
+}
+}
+
+/* TABLET */
+
+@media (min-width:768px) {
+  .content {
+    padding: 1.5em 5%;
+    float: right;
+    width: 90%;
+    position: relative;
+  }
+  
+  .content > .container {
+     width: 700px;
+   }
+  
+  .content-item {
+    width: 31.33333%;
+    margin: 0 1% 25px;
+  }
+
+}
+
+/* LAPTOP & DESKTOP */
+
+@media (min-width:992px) {
+  .content {
+    padding: 1.5em 1%;
+    float: right;
+    width: 83.33333333%;
+    position: relative;
+  }
+  
+  .content > .container {
+    width: auto;
+  }
+  
+  .content-item {
+    width: 23%;
+    margin: 0 1% 25px;
+  }
+
+}
