--- a/css/style.css
+++ b/css/style.css
@@ -498,6 +498,7 @@ footer .logo {
     font-size: 12px;
     color: #FFFFFF;
     line-height: 40px;
+    padding-left: 8px;
  }
 
  .left-nav .items ul {
