--- a/css/dropit.css
+++ b/css/dropit.css
@@ -10,8 +10,8 @@
 /* These styles assume you are using ul and li */
 .dropit {
   list-style: none;
-  padding: 0;
-  margin: 15px 0 0;
+  padding: 20px;
+  margin: 10px 0 0;
   display:inline-block;
 }
 .dropit .dropit-trigger { position: relative; }
@@ -24,10 +24,10 @@
   min-width: 100px;
   list-style: none;
   padding: 20px;
-  margin: 20px 0 0;
 }
 .dropit .dropit-open .dropit-submenu {
   display: block;
+    width: 150px;
    background: #FFFFFF;
    box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.30);
    border-radius: 4px;
@@ -46,7 +46,6 @@
  }
  .dropit .dropit-open .dropit-submenu li {
   display: block;
-  margin-bottom: 20px;
  }
  .dropit .dropit-open .dropit-submenu li:last-child {
   margin-bottom: 0px;
